modify url eng/

--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -5,7 +5,7 @@
 
 main:
   - name: English
-    url: https://www.kjang.com/eng/
+    url: eng/
     weight: 10
   - name: Korean
     url: https://www.kjang.com/kor/
