--- a/config.yaml
+++ b/config.yaml
@@ -4,7 +4,7 @@ theme: "starter-academic"
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: EconR # Website name
+title: EconRatoz # Website name
 baseurl: 'https://www.kjang.com' # Website URL
 copyright: '© {year} Kyungho Jang' # Footer text, e.g. '© {year} Me'
 
